# Gijiroku21

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  tech.md
apps/: README.md
apps/Desktop/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
apps/Desktop/src/: App.tsx  index.css
apps/Desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/Desktop/src-tauri/icons/: icon.icns
apps/Desktop/src-tauri/src/: error.rs  lib.rs  main.rs
apps/Desktop/src-tauri/src/commands/: mod.rs  recording.rs  system.rs  transcription.rs
apps/Desktop/src-tauri/src/state/: app_state.rs  meeting_state.rs  (+1 more)
apps/Desktop/src/api/: tauri.ts
apps/Desktop/src/components/: ConfirmModal.tsx  EmptyState.tsx  KeyboardShortcuts.tsx  LoadingSpinner.tsx  MeetingDashboard.tsx  MeetingHistory.tsx  MinutesEditor.tsx  OnboardingFlow.tsx  PrivacyStatusBar.tsx  SettingsPanel.tsx  TagEditor.tsx  Toast.tsx  Tooltip.tsx
core/: Cargo.toml  README.md
core/src/: lib.rs
core/src/asr/: mod.rs  model.rs  onnx_runtime.rs  streaming.rs  whisper.rs
core/src/audio/: buffer.rs  capture.rs  mel.rs  mod.rs  resample.rs
core/src/storage/: meeting_storage.rs  mod.rs
docs/: CURRENT_STATUS.md  DevelopmentPlan.html  DevelopmentPlan.md  IMPLEMENTATION_REPORT_PHASE8.md  Implementation.md  PHASE8_PROGRESS.md  README.md  RecommendationTech.md  SESSION_COMPLETION_SUMMARY.md  SPEC_VERIFICATION.md  Status.md  Task5_Report.md  architecture.md  chatgpt-a.md  npu_strategy.md  proposal.md  research.html  research.md  ui.md
models/: README.md
scripts/: README.md
tests/: README.md
